# serverless-apps-with-fastapi

./: .gitignore
.github/workflows/: api.yml  destroy.yml  ui.yml
infrastructure/: cf_tasks.yml
services/tasks_api/: README.md  config.py  main.py  models.py  pyproject.toml  schemas.py  serverless.yml  store.py  tests.py
services/tasks_ui/: index.html  package-lock.json  package.json  serverless.yml  vite.config.js
services/tasks_ui/src/: App.vue  aws-exports.js
