[tool.poetry]
name = "tasks-api"
version = "0.1.0"
description = ""
authors = ["stevel705 <stevel705@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"
httpx = "^0.27.0"
mangum = "^0.17.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
isort = "^5.13.2"
bandit = "^1.7.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
