[tool.poetry]
name = "tasks-api"
version = "0.1.0"
description = ""
authors = ["stevel705 <stevel705@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
httpx = "^0.28.1"
mangum = "^0.19.0"
boto3 = "^1.38.9"
pyjwt = "^2.10.1"
pydantic-settings = "^2.9.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
isort = "^6.0.1"
bandit = "^1.8.3"
moto = "^5.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
